test/files/neg/case-class-tostring/CaseClass.scala
case class A(i: Int, j: String)